# STDCR_monitor

./: ABOUT.md  CMakeLists.txt  Ganttův plánovač projektu.xlsx  Home.md  Projekt ZSWI.xlsx  README.md  bci_test.xml  erp_test.xml  re_test.xml  uml.xml
serial_comm/: serial_comm.cpp  serial_comm.h
stdcr_comm/: serials.h  serials_linux.cpp  serials_win.cpp  stdcr_comm.cpp  stdcr_comm.h  stimulator.cpp  stimulator.h
stdcr_monitor/: experiment.cpp  experiment.h  main.cpp  main_window.cpp  main_window.h  params.cpp  params.h
stdcr_monitor/experiments/: BCI.cpp  BCI.h  BIOSENSOR_LOGGER.h  ERP.cpp  ERP.h  RESPONSE_EXPERIMENT.cpp  RESPONSE_EXPERIMENT.h  TEST_MODE.cpp  TEST_MODE.h
stdcr_monitor/widgets/: qcheckgrid.cpp  qcheckgrid.h  qsaveloadwidget.cpp  qsaveloadwidget.h  qwaveform.cpp  qwaveform.h
stimulator_comm/: serials.cpp  serials.h  serials_linux.cpp  serials_win.cpp  stimulator.cpp  stimulator.h  sysname.h  sysname_linux.cpp  sysname_win.cpp
stimulator_fileserver/: data_packets.md  fileserver.cpp  fileserver.h  protocol.txt  transfer_protocol.cpp  transfer_protocol.h  upload_container.cpp  upload_container.h
stimulator_gui/: experiment.cpp  experiment.h  main.cpp  main_window.cpp  main_window.h  params.cpp  params.h
stimulator_gui/experiments/: AUTOSTIMULATION.h  BCI.cpp  BCI.h  BIOSENSOR_LOGGER.h  ERP.cpp  ERP.h  RESPONSE_EXPERIMENT.cpp  STIMULATOR_OUTPUTS.cpp  STIMULATOR_OUTPUTS.h
stimulator_gui/resources/: images.qrc
stimulator_gui/widgets/: qcheckgrid.cpp  qcheckgrid.h  qclickablelabel.cpp  qclickablelabel.h  qsaveloadwidget.cpp  qsaveloadwidget.h  qverticalscrollarea.cpp  qverticalscrollarea.h  qwaveform.cpp  qwaveform.h
stimulator_log/: log.cpp  log.h
stimulator_outputlauncher/: sdl_output_launcher.cpp  sdl_output_launcher.h
stimulator_tests/: CMakeLists.txt
stimulator_tests/arduino/: stimulator_avoutput_delay.ino  stimulator_emu.ino
stimulator_tests/fileserver_tests/: CMakeLists.txt  hello.cpp  qtester.cpp  qtester.h
stimulator_tests/qt_tests/: CMakeLists.txt  fileserver_test.cpp  fileserver_test.h  main.cpp  qsignaltester.cpp  qsignaltester.h  test_test.h
